--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -3,14 +3,18 @@
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 
   .menu {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 
-    .left {
+    .left-sips {
       border-right: 3px solid $blue;
+    }
+    .left-grub{
+      border-right: 3px solid $brown;
     }
 
     ul li {
@@ -29,6 +33,10 @@
     .border-top {
       border-top: 3px solid $blue;
     }
+    .border-top-grub {
+      border-top: 3px solid $brown;
+    }
+    
   }
 
   .spacer {
